Bug 1289608 - Provide explicit instantiation declarations for the various instantiations of XrapWrapper. r=bholley

MozReview-Commit-ID: 6rS9JJ1Ba9R